--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dharsan's personal website</title>
+
+    <!-- FAVICON -->
+
+    <link rel="icon" type="image/x-icon" href="images/favicon.ico">
     <!-- CSS LINK -->
     <link rel="stylesheet" href="styles.css">
     <!-- Bootstrap only -->
